@@ -1,4 +1,4 @@
-MANIFEST for byacc, version t20081224
+MANIFEST for byacc, version t20081225
 --------------------------------------------------------------------------------
 MANIFEST                        this file
 ACKNOWLEDGEMENTS                original version of byacc - 1993
